# pico

./: README.md  main.py  pyproject.toml
demo/: claim_tools.py  claims_pipeline.py
docs/: enterprise-architecture.md
pico_agents/: __init__.py  agent.py  orchestrator.py  tool.py  tools.py  tracer.py
tests/: test_framework.py  test_tool.py
