[project]
name = "pico"
version = "0.1.0"
description = "Build a minimal multi-agent framework, plus a Nemo-inspired claims triage demo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "boto3>=1.43.40",
    "docstring-parser>=0.18.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pico_agents"]